# AbProp

./: .gitignore  =1.14  =1.3  =2.0  CITATION.cff  DATA_ACQUISITION_GUIDE.md  Dockerfile  LICENSE  MLproject  Makefile  README.md  REPRODUCIBILITY.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: benchmark.yml
benchmarks/results/: baseline_example.json
configs/: bench.yaml  benchmarks.yaml  benchmarks_tmp.yaml  dashboard.example.json  data.yaml  dist.yaml  esm2_tiny.yaml  model.yaml  publication.mplstyle  therapeutic_bench.yaml  train.yaml
configs/ablations/: data_regimes.yaml  masking_rates.yaml  model_capacity.yaml  optimizers.yaml  plan.yaml  task_weights.yaml
data/: DATA_PROVENANCE.md
demo/: README.md  app.py  requirements.txt
docs/: ABLATION_STUDIES.md  BENCHMARK_DELIVERABLES.md  BENCHMARK_IMPLEMENTATION_SUMMARY.md  BENCHMARK_QUICK_REFERENCE.md  BENCHMARK_SUITE.md  CASE_STUDIES.md  CONTINUOUS_BENCHMARKING.md  CROSS_VALIDATION.md  CROSS_VALIDATION_QUICKSTART.md  DASHBOARD.md  EVALUATION.md  GETTING_STARTED.md  LEADERBOARD.md  README.md  REAL_DATA_SUMMARY.md  RESULTS.md  TRAINING.md  TRAINING_GUIDE.md
docs/case_studies/: README.md  TEMPLATE.md  cdr_annotation.md  developability.md  humanization.md  interpretability_failure.md  qc_monitoring.md
docs/figures/attention/: README.md
docs/figures/embeddings/: README.md
examples/: attention_failure.fa  attention_success.fa  cv_example.py  run_benchmark_example.py
logs/: abprop-ddp-9936484.out
models/: MODEL_CARDS.md
models/cards/: best-val-2024-07-01.md  repro-run.md
notebooks/: quickstart.ipynb
scripts/: analyze_ablations.py  bench_dataloader.py  bench_train.py  build_cdr_gold_standard.py  check_regression.py  create_difficulty_splits.py  curate_therapeutic_dataset.py  download_oas_data.py  etl.py  eval.py  eval_baselines.py  eval_cv.py  eval_esm2.py  fetch_airr_data.py  fetch_real_antibody_data.py  generate_paper_figures.py  launch_dashboard.py  launch_slurm.py  plot_baseline_comparison.py  plot_difficulty_performance.py  process_real_data_etl.py  registry.py  reproduce_all.sh  reproduce_minimal.sh  run_ablations.py  run_benchmarks.py  run_etl_standalone.py  serve.py  train.py  train_cv.py  train_esm2_probes.py  validate_cdr_schemes.py  verify_benchmarks.py  visualize_attention.py  visualize_embeddings.py
slurm/: env_nccl.sh  multi_node.sbatch  single_node.sbatch
src/abprop/: __init__.py  cli.py
src/abprop/baselines/: __init__.py  esm2_baseline.py  simple_baselines.py
src/abprop/benchmarks/: README.md  __init__.py  cdr_classification_benchmark.py  developability_benchmark.py  liability_benchmark.py  perplexity_benchmark.py  registry.py  stratified_benchmark.py  zero_shot_benchmark.py
src/abprop/commands/: __init__.py  etl.py  eval.py  launch.py  train.py
src/abprop/data/: __init__.py  cross_validation.py  dataset.py  etl.py  schema.py
src/abprop/eval/: __init__.py  error_analysis.py  metrics.py  stratified.py  uncertainty.py
src/abprop/models/: __init__.py  transformer.py
src/abprop/registry/: __init__.py  json_registry.py
src/abprop/server/: __init__.py  app.py
src/abprop/tokenizers/: __init__.py  aa.py
src/abprop/train/: __init__.py  loop.py
src/abprop/utils/: __init__.py  dist.py  fsdp.py  liabilities.py  mlflowx.py
src/abprop/viz/: __init__.py  attention.py  dashboard.py  embeddings.py  publication_figures.py
tests/: test_batching.py  test_dataset.py  test_esm2_baseline.py  test_etl_schema.py  test_liabilities.py  test_model_transformer.py  test_registry.py  test_tokenizer.py  test_train_loop.py  test_train_step.py  test_uncertainty.py  test_viz_embeddings.py
