[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abprop"
version = "0.1.0"
description = "Sequence-only antibody property modeling toolkit."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "AbProp Team", email = "ml@abprop.local"}
]
keywords = ["antibody", "protein", "machine-learning", "pytorch"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pyarrow>=12.0",
    "torch>=2.1,<2.2",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "matplotlib>=3.7",
]

[project.scripts]
abprop-etl = "abprop.commands.etl:main"
abprop-train = "abprop.commands.train:main"
abprop-eval = "abprop.commands.eval:main"
abprop-launch = "abprop.commands.launch:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.2.0",
    "mypy>=1.8",
]
serve = [
    "fastapi>=0.110",
    "uvicorn>=0.23",
]

[project.urls]
Homepage = "https://example.com/abprop"
Documentation = "https://example.com/abprop/docs"
Source = "https://example.com/abprop/source"
