[metadata]
name = abprop
version = 0.1.0
description = Sequence-only antibody property modeling toolkit.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://example.com/abprop
author = AbProp Team
author_email = ml@abprop.local
license = Apache-2.0

[options]
packages = find:
install_requires =
    numpy>=1.24
    pandas>=2.0
    pyarrow>=12.0
    torch>=2.1,<2.2
    pyyaml>=6.0
    tqdm>=4.66
python_requires = >=3.9
include_package_data = True

[options.package_data]
abprop = py.typed

[options.entry_points]
console_scripts =
    abprop-etl = scripts.etl:main
    abprop-train = scripts.train:main
    abprop-eval = scripts.eval:main

[tool:pytest]
addopts = -ra -q
testpaths = tests

[flake8]
max-line-length = 100
extend-ignore = E203,W503
exclude = .git,__pycache__,build,dist

[mypy]
python_version = 3.9
ignore_missing_imports = True
warn_unused_configs = True

