[metadata]
name = abprop
version = 0.1.0
description = Sequence-only antibody property modeling toolkit.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://example.com/abprop
author = AbProp Team
author_email = ml@abprop.local
license = Apache-2.0

[options]
packages = find:
package_dir =
    = src
install_requires =
    numpy>=1.24,<2
    pandas>=2.0
    pyarrow>=12.0
    torch>=2.1,<2.2
    pyyaml>=6.0
    tqdm>=4.66
    matplotlib>=3.7
    requests>=2.31
python_requires = >=3.9
include_package_data = True

[options.extras_require]
dev =
    pytest>=7.4
    pytest-cov>=4.1
    ruff>=0.2.0
    mypy>=1.8
serve =
    fastapi>=0.110
    uvicorn>=0.23
bench =
    mlflow>=2.12
    seaborn>=0.13
    scipy>=1.10,<1.12
    scikit-learn>=1.2,<1.4

[options.package_data]
abprop = py.typed

[options.entry_points]
console_scripts =
    abprop-etl = abprop.commands.etl:main
    abprop-train = abprop.commands.train:main
    abprop-eval = abprop.commands.eval:main
    abprop-launch = abprop.commands.launch:main

[options.packages.find]
where = src

[tool:pytest]
addopts = -ra -q
testpaths = tests

[flake8]
max-line-length = 100
extend-ignore = E203,W503
exclude = .git,__pycache__,build,dist

[mypy]
python_version = 3.9
ignore_missing_imports = True
warn_unused_configs = True
